# Remind.rs

./: .env-example  .gitignore  Cargo.toml  Makefile.toml  README.md
config/: Cargo.toml
config/src/: app.rs  email.rs  lib.rs  local_storage.rs  s3_storage.rs  security.rs  server.rs  surreal_db.rs
domain/: Cargo.toml
domain/src/models/: mod.rs  note.rs  property.rs  user.rs
dtos/: Cargo.toml
dtos/src/: lib.rs
dtos/src/note/: create.rs  info.rs  mod.rs  udpdate.rs  update.rs
dtos/src/property/: create.rs  mod.rs  udpdate.rs
dtos/src/user/: create.rs  create_user.rs  info.rs  login.rs  mod.rs  reset_password.rs  udpdate.rs  update.rs
http/: Cargo.toml
http/src/: error.rs  lib.rs  meta.rs  response.rs
migrations/definitions/: _initial.json
repository/: Cargo.toml
repository/src/: lib.rs
repository/src/note/: in_memory.rs  interface.rs  mod.rs  surrealdb.rs
repository/src/property/: in_memory.rs  interface.rs  mod.rs  surrealdb.rs
repository/src/user/: in_memory.rs  interface.rs  mod.rs  surrealdb.rs  user_interface.rs
schemas/: 20260207_080949_note_schemas.surql  20260207_081030_property_schemas.surql  notes_schema.surql  propertys_schema.surql  users_schema.surql
security/: Cargo.toml
security/src/: argon2.rs  hash.rs  lib.rs  token.rs
server/: Cargo.toml
server/src/: app.rs  config.rs  db.rs  main.rs
server/src/errors/: bad_request.rs  mod.rs  not_found.rs
server/src/guards/: authenticated_email.rs  authenticated_user.rs  mod.rs
server/src/http/: response.rs
server/src/routers/: auth.rs  mod.rs  notes.rs  propertys.rs  user.rs  users.rs
server/src/utils/: file.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/email/: mod.rs
services/src/email/send_email/: builder.rs  error.rs  mod.rs  service.rs
services/src/file/: builder.rs  mod.rs  service.rs
services/src/file/local_storage/: builder.rs  service.rs
services/src/file/s3_storage/: builder.rs  mod.rs  service.rs
services/src/note/: mod.rs
services/src/note/create_note/: builder.rs  service.rs
services/src/note/delete_note/: builder.rs  service.rs
services/src/note/list_note/: builder.rs  service.rs
services/src/note/update_note/: builder.rs  service.rs
services/src/property/: mod.rs
services/src/property/create_property/: builder.rs  service.rs
services/src/property/delete_property/: service.rs
services/src/property/list_property/: builder.rs  service.rs
services/src/property/update_property/: service.rs
services/src/user/: create_user.rs  mod.rs
services/src/user/create_user/: builder.rs  error.rs  service.rs
services/src/user/delete_user/: builder.rs  error.rs  mod.rs  service.rs
services/src/user/info_user/: builder.rs  service.rs
services/src/user/login_user/: builder.rs  error.rs  mod.rs  service.rs
services/src/user/update_user/: builder.rs  service.rs
storage/private/: email_reset_password.html
web/: Cargo.toml  Dioxus.toml
web/assets/: main.css
web/src/: main.rs  router.rs
web/src/components/: blur_container.rs  button.rs  drag.rs  draggable.rs  floatbar.rs  iconoir.rs  iconoir_button.rs  mod.rs  models.rs  note.rs  property.rs  subtitle.rs  text_input.rs  textarea_input.rs  title.rs
web/src/contexts/: auth.rs  backend.rs  mod.rs  workspace.rs
web/src/integrations/: backend.rs
web/src/pages/: mod.rs
web/src/pages/corkboard/: mod.rs
web/src/pages/form/: mod.rs  style.css
web/src/pages/login/: mod.rs
web/src/pages/preview/: mod.rs
web/src/pages/register/: mod.rs
web/src/pages/reset_password/: mod.rs
web/src/pages/settings/: mod.rs
web/src/pages/user/: mod.rs
