[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-multipart = "0.7.2"
actix-web = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
domain = { workspace = true }
dotenv = "0.15.0"
dtos = { workspace = true }
futures-util = "0.3.31"
http = { path = "../http/", features = ["actix-web"] }
repository = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
security = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
services = { workspace = true }
surrealdb = { workspace = true }
surrealdb-migrations = "2.4.0"
tokio = { workspace = true }
