[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
domain = { workspace = true }
dtos = { workspace = true }
repository = { workspace = true }
security = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
