[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.122.0"
aws-smithy-types = "1.4.3"
domain = { workspace = true }
dtos = { workspace = true }
lettre = "0.11.19"
repository = { workspace = true }
security = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
