[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
domain = { workspace = true }
dtos = { workspace = true }
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
http = { path = "../http/" }
reqwest = { version = "0.13.2", features = ["form", "json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]

[profile.dev]
opt-level = 0
debug = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
